--- a/aula08/Aula08_Repeticoes.ipynb
+++ b/aula08/Aula08_Repeticoes.ipynb
@@ -594,17 +594,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite um número inteiro positivo:  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado da soma: 8190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando while\n",
+    "N = int(input(\"Digite um número inteiro positivo: \"))\n",
+    "E = 0\n",
+    "i = 1\n",
+    "\n",
+    "while i <= N:\n",
+    "    E += 2 ** i\n",
+    "    i += 1\n",
+    "\n",
+    "print(f\"Resultado da soma: {E}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite um número inteiro positivo:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado da soma: 2046\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando while\n",
+    "N = int(input(\"Digite um número inteiro positivo: \"))\n",
+    "E = 0\n",
+    "i = 1\n",
+    "\n",
+    "while i <= N:\n",
+    "    E += 2 ** i\n",
+    "    i += 1\n",
+    "\n",
+    "print(f\"Resultado da soma: {E}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -623,7 +675,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inicialização de listas e acumuladores\n",
+    "pesos = []\n",
+    "alturas = []\n",
+    "imcs = []\n",
+    "\n",
+    "# Coleta de dados para 5 pessoas\n",
+    "for i in range(1, 6):\n",
+    "    print(f\"\\nPessoa {i}\")\n",
+    "    peso = float(input(\"Digite o peso (em kg): \"))\n",
+    "    altura = float(input(\"Digite a altura (em metros): \"))\n",
+    "    \n",
+    "    imc = peso / (altura ** 2)\n",
+    "    \n",
+    "    pesos.append(peso)\n",
+    "    alturas.append(altura)\n",
+    "    imcs.append(imc)\n",
+    "\n",
+    "# Cálculos finais\n",
+    "peso_medio = sum(pesos) / len(pesos)\n",
+    "altura_media = sum(alturas) / len(alturas)\n",
+    "maior_imc = max(imcs)\n",
+    "menor_imc = min(imcs)\n",
+    "\n",
+    "# Resultados\n",
+    "print(\"\\n--- RESULTADOS ---\")\n",
+    "print(f\"Peso médio: {peso_medio:.2f} kg\")\n",
+    "print(f\"Altura média: {altura_media:.2f} m\")\n",
+    "print(f\"Maior IMC: {maior_imc:.2f}\")\n",
+    "print(f\"Meno"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,10 +716,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite um número inteiro para calcular o fatorial:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20! = 2432902008176640000\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Digite um número inteiro para calcular o fatorial: \"))\n",
+    "fatorial = 1\n",
+    "\n",
+    "for i in range(1, x + 1):\n",
+    "    fatorial *= i\n",
+    "\n",
+    "print(f\"{x}! = {fatorial}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -648,10 +753,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 primeiros números da sequência de Fibonacci:\n",
+      "0 1 1 2 3 5 8 13 21 34 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Os dois primeiros termos da sequência\n",
+    "a, b = 0, 1\n",
+    "\n",
+    "print(\"10 primeiros números da sequência de Fibonacci:\")\n",
+    "for _ in range(10):\n",
+    "    print(a, end=\" \")\n",
+    "    a, b = b, a + b\n",
+    "print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -662,10 +785,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite quantos números primos deseja ver:  50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os 50 primeiros números primos são:\n",
+      "2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97 101 103 107 109 113 127 131 137 139 149 151 157 163 167 173 179 181 191 193 197 199 211 223 227 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Digite quantos números primos deseja ver: \"))\n",
+    "primos_encontrados = 1\n",
+    "numero = 2\n",
+    "\n",
+    "print(f\"Os {n} primeiros números primos são:\")\n",
+    "while primos_encontrados < n:\n",
+    "    # Verifica se o número é primo\n",
+    "    eh_primo = True\n",
+    "    for i in range(2, int(numero ** 0.5) + 1):\n",
+    "        if numero % i == 0:\n",
+    "            eh_primo = False\n",
+    "            break\n",
+    "\n",
+    "    if eh_primo:\n",
+    "        print(numero, end=\" \")\n",
+    "        primos_encontrados += 1\n",
+    "\n",
+    "    numero += 1\n",
+    "\n",
+    "print()"
+   ]
   },
   {
    "cell_type": "markdown",
