--- a/aula12 (1)/Aula12_ListasTuplasDicionarios.ipynb
+++ b/aula12 (1)/Aula12_ListasTuplasDicionarios.ipynb
@@ -3122,10 +3122,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequência de cada soma (2 a 12):\n",
+      "Soma 2: 818 vezes\n",
+      "Soma 3: 1682 vezes\n",
+      "Soma 4: 2461 vezes\n",
+      "Soma 5: 3314 vezes\n",
+      "Soma 6: 4204 vezes\n",
+      "Soma 7: 4978 vezes\n",
+      "Soma 8: 4200 vezes\n",
+      "Soma 9: 3257 vezes\n",
+      "Soma 10: 2515 vezes\n",
+      "Soma 11: 1731 vezes\n",
+      "Soma 12: 840 vezes\n",
+      "\n",
+      "A soma 7 apareceu 4978 vezes (16.59%)\n",
+      "Ela corresponde a aproximadamente 1/6 das jogadas?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Inicializa o dicionário para contar as somas\n",
+    "frequencia_somas = {soma: 0 for soma in range(2, 13)}\n",
+    "\n",
+    "# Rola os dados 30.000 vezes\n",
+    "for _ in range(30000):\n",
+    "    dado1 = random.randint(1, 6)\n",
+    "    dado2 = random.randint(1, 6)\n",
+    "    soma = dado1 + dado2\n",
+    "    frequencia_somas[soma] += 1\n",
+    "\n",
+    "# Exibe as frequências\n",
+    "print(\"Frequência de cada soma (2 a 12):\")\n",
+    "for soma in sorted(frequencia_somas):\n",
+    "    print(f\"Soma {soma}: {frequencia_somas[soma]} vezes\")\n",
+    "\n",
+    "# Verifica se a soma 7 é aproximadamente 1/6 das jogadas\n",
+    "porcentagem_7 = (frequencia_somas[7] / 30000) * 100\n",
+    "print(f\"\\nA soma 7 apareceu {frequencia_somas[7]} vezes ({porcentagem_7:.2f}%)\")\n",
+    "print(\"Ela corresponde a aproximadamente 1/6 das jogadas?\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3149,7 +3193,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leitura da matriz 2x2\n",
+    "matriz = []\n",
+    "\n",
+    "print(\"Digite os elementos da matriz 2x2:\")\n",
+    "for i in range(2):\n",
+    "    linha = []\n",
+    "    for j in range(2):\n",
+    "        valor = float(input(f\"Elemento {i+1},{j+1} = \"))\n",
+    "        linha.append(valor)\n",
+    "    matriz.append(linha)\n",
+    "\n",
+    "# Impressão dos elementos conforme solicitado\n",
+    "print(\"\\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3163,7 +3221,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leitura da matriz 4x4\n",
+    "matriz = []\n",
+    "\n",
+    "print(\"Digite os elementos da matriz 4x4:\")\n",
+    "for i in range(4):\n",
+    "    linha = []\n",
+    "    for j in range(4):\n",
+    "        valor = float(input(f\"Elemento {i+1},{j+1}: \"))\n",
+    "        linha.append(valor)\n",
+    "    matriz.append(linha)\n",
+    "\n",
+    "# Soma da diagonal principal (posições onde i == j)\n",
+    "soma_diagonal = 0\n",
+    "for i in range(4):\n",
+    "    soma_diagonal += matriz[i][i]\n",
+    "\n",
+    "print(f\"\\nSoma dos elementos da diagonal principal: {soma_diagonal}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3177,7 +3253,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Leitura da matriz 5x5\n",
+    "matriz = []\n",
+    "\n",
+    "print(\"Digite os elementos da matriz 5x5:\")\n",
+    "for i in range(5):\n",
+    "    linha = []\n",
+    "    for j in range(5):\n",
+    "        valor = float(input(f\"Elemento {i+1},{j+1}: \"))\n",
+    "        linha.append(valor)\n",
+    "    matriz.append(linha)\n",
+    "\n",
+    "# Cálculo da média das linhas pares (índices 0, 2, 4)\n",
+    "soma = 0\n",
+    "cont = 0\n",
+    "for i in range(0, 5, 2):  # linhas de índice par\n",
+    "    for j in range(5):\n",
+    "        soma += matriz[i][j]\n",
+    "        cont += 1\n",
+    "\n",
+    "media = soma / cont\n",
+    "print(f\"\\nMédia dos elementos das linhas pares: {media:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3198,14 +3296,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def eh_primo(n):\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(n**0.5)+1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Busca dos 10 primeiros primos acima de 100\n",
+    "primos = []\n",
+    "numero = 101\n",
+    "while len(primos) < 10:\n",
+    "    if eh_primo(numero):\n",
+    "        primos.append(numero)\n",
+    "    numero += 1\n",
+    "\n",
+    "# Converte para tupla\n",
+    "tupla_primos = tuple(primos)\n",
+    "\n",
+    "# Exibe os valores\n",
+    "print(\"Os 10 primeiros números primos acima de 100 são:\")\n",
+    "print(tupla_primos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3227,7 +3341,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Criação do dicionário\n",
+    "pessoas = {}\n",
+    "\n",
+    "# Entrada de dados\n",
+    "for i in range(10):\n",
+    "    sobrenome = input(f\"Digite o sobrenome da pessoa {i+1}: \")\n",
+    "    idade = int(input(f\"Digite a idade de {sobrenome}: \"))\n",
+    "    pessoas[sobrenome] = idade\n",
+    "\n",
+    "# Encontrar pessoa mais velha\n",
+    "mais_velho = max(pessoas, key=pessoas.get)\n",
+    "print(f\"\\nA pessoa com maior idade é: {mais_velho} ({pessoas[mais_velho]} anos)\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3241,7 +3368,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Dicionário com pelo menos 5 pares\n",
+    "pessoas = {\n",
+    "    \"Ana\": 22,\n",
+    "    \"Bruno\": 30,\n",
+    "    \"Carlos\": 27,\n",
+    "    \"Diana\": 35,\n",
+    "    \"Eduardo\": 19\n",
+    "}\n",
+    "\n",
+    "# Cálculo da média\n",
+    "media_idade = sum(pessoas.values()) / len(pessoas)\n",
+    "\n",
+    "# Exibe nomes com idade acima da média\n",
+    "print(f\"Média das idades: {media_idade:.2f}\")\n",
+    "print(\"Pessoas com idade acima da média:\")\n",
+    "for nome, idade in pessoas.items():\n",
+    "    if idade > media_idade:\n",
+    "        print(f\"{nome} ({idade} anos)\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3255,7 +3401,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Duas listas com 5 elementos cada\n",
+    "lista1 = [1, 2, 3, 4, 5]\n",
+    "lista2 = [4, 5, 6, 7, 8]\n",
+    "\n",
+    "# Criação do conjunto união\n",
+    "uniao = set(lista1) | set(lista2)\n",
+    "\n",
+    "# Exibe resultado\n",
+    "print(f\"Lista 1: {lista1}\")\n",
+    "print(f\"Lista 2: {lista2}\")\n",
+    "print(f\"União das duas listas (sem repetições): {uniao}\")"
+   ]
   },
   {
    "cell_type": "markdown",
