--- a/aula15/aula15_modulos.ipynb
+++ b/aula15/aula15_modulos.ipynb
@@ -917,9 +917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os 10 primeiros números aleatórios são: [3, 450, 549, 67, 52, 359, 95, 156, 112, 623]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -928,6 +936,29 @@
     "\n",
     "# Exibe os 10 primeiros números da lista\n",
     "print(\"Os 10 primeiros números aleatórios são:\", numeros_aleatorios[:10])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 16, 33, 34, 36, 38, 46, 46, 67, 74]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint, seed \n",
+    "lista = []\n",
+    "seed (10)\n",
+    "for _ in range (100):\n",
+    "    lista.append(randint(1, 1000))\n",
+    "l = sorted(lista)[:10]\n",
+    "print(l)"
    ]
   },
   {
@@ -941,25 +972,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média: 494.86\n",
+      "Mediana: 463.00\n",
+      "Desvio Padrão: 279.79\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import statistics\n",
     "\n",
     "# Gera uma lista de 100 números aleatórios inteiros entre 1 e 1000\n",
-    "numeros_aleatorios = [random.randint(1, 1000) for _ in range(100)]\n",
+    "l = [random.randint(1, 1000) for _ in range(100)]\n",
     "\n",
     "# Calcula a média, a mediana e o desvio padrão\n",
-    "media = statistics.mean(numeros_aleatorios)\n",
-    "mediana = statistics.median(numeros_aleatorios)\n",
-    "desvio_padrao = statistics.stdev(numeros_aleatorios)\n",
+    "media = statistics.mean(l)\n",
+    "mediana = statistics.median(l)\n",
+    "desvio_padrao = statistics.stdev(l)\n",
     "\n",
     "# Exibe os resultados\n",
     "print(f\"Média: {media:.2f}\")\n",
     "print(f\"Mediana: {mediana:.2f}\")\n",
     "print(f\"Desvio Padrão: {desvio_padrao:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média: 494.86\n",
+      "Mediana: 463.00\n",
+      "Desvio Padrão: 279.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statistics import mean, median, stdev\n",
+    "media = mean(l)\n",
+    "mediana = median(l)\n",
+    "dp = stdev (l)\n",
+    "# Resultados\n",
+    "print(f\"Média: {media:.2f}\")\n",
+    "print(f\"Mediana: {mediana:.2f}\")\n",
+    "print(f\"Desvio Padrão: {dp:.2f}\")"
    ]
   },
   {
@@ -973,9 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivos no diretório 'dados': ['arquivo_1.txt', 'arquivo_2.txt', 'arquivo_3.txt', 'arquivo_4.txt', 'arquivo_5.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -1005,9 +1080,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média dos números no arquivo arquivo_1.txt: 46.35\n",
+      "Média dos números no arquivo arquivo_2.txt: 60.00\n",
+      "Média dos números no arquivo arquivo_3.txt: 44.40\n",
+      "Média dos números no arquivo arquivo_4.txt: 55.75\n",
+      "Média dos números no arquivo arquivo_5.txt: 52.90\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import statistics\n",
